--- a/lib/Makefile
+++ b/lib/Makefile
@@ -21,8 +21,9 @@ CPP	+= -I../include
 	-c -o $*.o $<
 
 OBJS  = ctype.o _exit.o open.o close.o errno.o write.o dup.o setsid.o \
-	execve.o wait.o string.o malloc.o
+	execve.o wait.o string.o malloc.o sethostname.o
 
+# archive 归档
 lib.a: $(OBJS)
 	@$(AR) rcs lib.a $(OBJS)
 	@sync
